[package]
version = "0.1.0"
name = "cornish-client"
description = "The cross platform browser client for Architect x Cornish"
repository = "https://github.com/thearchproj/cornish"
authors = ["Rohan Mishra <rohanmishra2017@gmail.com>"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "HtmlMediaElement",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
