[package]
name = "cornish-server"
version = "0.1.0"
authors = ["Rohan Mishra <rohanmishra2017@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.13"
http = "0.2.3"
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.4", features = ["full"] }
hyper-staticfile = "0.6.0"

